--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
 header {
     height: 100px;
+    width: 100%;
     display: flex;
-    /* justify-content: space-between;
-    align-items: center; */
+    justify-content: space-between;
+    align-items: center;
     background-color:#3347B0;
+    padding: 0 50px;
 }
 
 .logo{
     display: flex;
     align-items: center;
-    height: 100px;
-    width: 100%;
+    gap: 12px;
 }
 
 .logo h1{
@@ -28,8 +29,8 @@ button {
     background-color: transparent;
     border: 0px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    gap: 10px;
 
 }
 
@@ -37,6 +38,7 @@ button {
     color: #ffffff;
     display: flex;
     align-items: center;
+    font-size: 24px;
 }
 
 .home{
@@ -50,6 +52,7 @@ button {
     color:#353535;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: normal;
+    font-size: 48px;
 }
 
 .home span{
@@ -70,7 +73,14 @@ main{
 .contatos{
     display: flex;
     flex-direction: column;
-    align-items: centers;
+    align-items: flex-start;
+    gap: 8px;
+}
+
+.contato-lista{
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 
 .copyright{
@@ -81,22 +91,57 @@ main{
 
 .contato-social{
     display: flex;
-    flex-direction: row;
     align-items: center;
-    /* border: 2px;
-    border-radius: 50%; */
-    border-color: #ffffff;
     gap: 20px;
+}
+
+.social-icon{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+    border: 2px solid #ffffff;
+    border-radius: 50%;
 }
 
 
 
 footer{
     background-color:#3347B0;
+    width: 100%;
     height: 140px;
     display: flex;
     gap: 20px;
     justify-content: space-between;
     align-items: center;
+    padding: 0 50px;
     color: #ffffff;
 }
+
+
+/* Pagina dos alunos */
+
+.home.pagina-alunos{
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 24px;
+    flex-wrap: wrap;
+}
+
+.card-aluno{
+    width: 240px;
+    height: 120px;
+    border-radius: 12px;
+    background-color: #3347B0;
+    color: #ffffff;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-family: system-ui, sans-serif;
+    font-weight: 500;
+}
+
